# premier-league-predictor

./: .env.example  .gitignore  README.md  SYSTEM_GUIDE.md  pyproject.toml  requirements.txt
.claude/: launch.json
.streamlit/: config.toml
app/: dashboard.py
app/static/: manifest.json
data/processed/: dixon_coles.json  ensemble.json  fixtures_2627.parquet  fpl_fixtures.parquet  fpl_players.parquet  fpl_teams.parquet  lgbm_model.txt  match_predictions.parquet  matches.parquet  position_matrix.parquet  score_matrices.npz  sim_table.parquet  sim_team_goals.npy  sim_team_order.json  top_assists.parquet  top_scorers.parquet
src/plpredict/: __init__.py  cli.py  config.py  features.py  players.py  predict.py  simulate.py
src/plpredict/models/: dixon_coles.py  ensemble.py  ml_model.py
src/plpredict/sources/: api_football.py  fixture_feed.py  football_data.py  fpl.py
tests/: test_models.py  test_simulation.py
