[project]
name = "plpredict"
version = "0.1.0"
description = "Premier League 26/27 match, table, and Golden Boot prediction model"
readme = "README.md"
authors = [
    { name = "Vimdawg", email = "vimanvinesh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scipy>=1.18.0",
    "streamlit>=1.59.1",
]

[project.scripts]
plpredict = "plpredict.cli:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
